# algo-trading

./: .env.dev  .gitignore  Cargo.toml  README.md  algo-trading.code-workspace
datasets/5minute/: 21STCENMGM.csv  3IINFOLTD.csv  3PLAND.csv  AAKASH.csv  AAREYDRUGS.csv  AARTISURF.csv  AARVI.csv  AAVAS.csv  ABSLAMC.csv  ABSLBANETF.csv  AFFLE.csv  AGROPHOS.csv  AGSTRA.csv  AIRAN.csv  AIROLAM.csv  AJOONI.csv  AKASH.csv  AKSHAR.csv  ALPSINDUS.csv  AMIORG.csv  ANDREWYU.csv  ANMOL.csv  ANTGRAPHIC.csv  ANUP.csv  ANURAS.csv  APOLLOPIPE.csv  APTUS.csv  ARENTERP.csv  ARIHANTCAP.csv  ARTEMISMED.csv  ARVEE.csv  ARVINDFASN.csv  ASALCBR.csv  ATGL.csv  AWL.csv  AXISBPSETF.csv  AXISHCETF.csv  AXITA.csv  BAJAJHCARE.csv  BCP.csv  (+320 more)
src/: api_server.rs  backtest_main.rs  chart_print.rs  data_dump_script.rs  main.rs  main_thread.rs  read_csv.rs  socket_data_1min.rs
src/algo_hub/: algo_backtester.rs  algo_configurator.rs  algo_dispatcher.rs  algo_runner.rs  hammer_pattern.rs  mod.rs  shooting_star_pattern.rs  support_resistance_fractol.rs
src/api/: mod.rs  routes.rs
src/backtest_stock/: stock_5_min.rs
src/common/: algo_types.rs  database.rs  date_parser.rs  enums.rs  mod.rs  number_parser.rs  raw_stock.rs  read_csv.rs  redis_client.rs  utils.rs
src/config/: mod.rs  mongodb_connection.rs
src/data_consumer/: current_market_state.rs  data_consumer_via_csv.rs  mod.rs  previous_volatility_in_stocks.rs  support_resistance_fractol.rs
src/market/: current_market_state.rs  mod.rs
src/order_manager/: current_market_state.rs  mod.rs  order_dispatcher.rs  pnl_state.rs  trade_signal_keeper.rs
(+17 files in other folders)
