[package]
name = "algo-trading"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socket_data_1min"
path = "src/socket_data_1min.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
linked-hash-map = "0.5"
plotters = "0.3.5"
chrono = "0.4.26"
redis = "0.23.0"
once_cell = "1.8"
mongodb = "2.6.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
tokio-tungstenite = "0.16.0"
tungstenite = "0.15.0"
url = "2.2.2"
uuid = "1.4.1"
colored = "2.0"
dotenv = "0.15.0"